Removed unnecessary array creation in getconstructors call